--- a/changelog.txt
+++ b/changelog.txt
@@ -1,27 +1,38 @@
-	                          ___           ___                        _____                      
-	                         /  /\         /  /\         _____        /  /::\                     
-	                        /  /::\       /  /:/_       /  /::\      /  /:/\:\                    
-	                       /  /:/\:\     /  /:/ /\     /  /:/\:\    /  /:/  \:\                   
-	                      /  /:/~/:/    /  /:/_/::\   /  /:/~/::\  /__/:/ \__\:|                  
-	                     /__/:/ /:/___ /__/:/__\/\:\ /__/:/ /:/\:| \  \:\ /  /:/                  
-	                     \  \:\/:::::/ \  \:\ /~~/:/ \  \:\/:/~/:/  \  \:\  /:/                   
-	                      \  \::/~~~~   \  \:\  /:/   \  \::/ /:/    \  \:\/:/                    
-	                    ___\  \:\     ___\  \:\/:/     \  \:\/:/  ___ \  \::/                     
-	        ___        /  /\\  \:\   /  /\\  \::/       \  \::/  /__/| \__\/  ___           ___   
-	       /  /\      /  /::\\__\/  /  /::\\__\/         \__\/  |  |:|       /  /\         /  /\  
-	      /  /:/     /  /:/\:\     /  /:/\:\    ___     ___     |  |:|      /  /:/        /  /:/  
-	     /  /:/     /  /:/  \:\   /  /:/  \:\  /__/\   /  /\  __|  |:|     /__/::\       /  /:/   
-	    /  /::\    /__/:/ \__\:\ /__/:/ \__\:\ \  \:\ /  /:/ /__/\_|:|____ \__\/\:\__   /  /::\   
-	   /__/:/\:\   \  \:\ /  /:/ \  \:\ /  /:/  \  \:\  /:/  \  \:\/:::::/    \  \:\/\ /__/:/\:\  
-	   \__\/  \:\   \  \:\  /:/   \  \:\  /:/    \  \:\/:/    \  \::/~~~~      \__\::/ \__\/  \:\ 
-	        \  \:\   \  \:\/:/     \  \:\/:/      \  \::/      \  \:\          /__/:/       \  \:\
-	         \__\/    \  \::/       \  \::/        \__\/        \  \:\         \__\/         \__\/
-	                   \__\/         \__\/                       \__\/ 
+                                          ,----,                                      ,----, 
+                       ,-.----.         ,/   .`|       ,--,       ,--.              ,/   .`| 
+    ,---,        ,---,.\    /  \      ,`   .'  :     ,--.'|   ,--/  /|   ,---,    ,`   .'  : 
+  .'  .' `\    ,'  .' ||   :    \   ;    ;     /  ,--,  | :,---,': / ',`--.' |  ;    ;     / 
+,---.'     \ ,---.'   ||   |  .\ :.'___,/    ,',---.'|  : ':   : '/ / |   :  :.'___,/    ,'  
+|   |  .`\  ||   |   .'.   :  |: ||    :     | |   | : _' ||   '   ,  :   |  '|    :     |   
+:   : |  '  |:   :  |-,|   |   \ :;    |.';  ; :   : |.'  |'   |  /   |   :  |;    |.';  ;   
+|   ' '  ;  ::   |  ;/||   : .   /`----'  |  | |   ' '  ; :|   ;  ;   '   '  ;`----'  |  |   
+'   | ;  .  ||   :   .';   | |`-'     '   :  ; '   |  .'. |:   '   \  |   |  |    '   :  ;   
+|   | :  |  '|   |  |-,|   | ;        |   |  ' |   | :  | '|   |    ' '   :  ;    |   |  '   
+'   : | /  ; '   :  ;/|:   ' |        '   :  | '   : |  : ;'   : |.  \|   |  '    '   :  |   
+|   | '` ,/  |   |    \:   : :        ;   |.'  |   | '  ,/ |   | '_\.''   :  |    ;   |.'    
+;   :  .'    |   :   .'|   | :        '---'    ;   : ;--'  '   : |    ;   |.'     '---'      
+|   ,.'      |   | ,'  `---'.|                 |   ,/      ;   |,'    '---'                  
+'---'        `----'      `---`                 '---'       '---'                             
 
 ===============================
 **** CHANGELOG
 ===============================
 
+=======
+006 - May 13th 2014
+ - Changed name to DEPTHKIT
+ - Support for 1473 Kinect Sensor
+ - Added horizontal and vertical scanlines in addition to wireframes
+ - Added random noise grid
+ - Added support for background colors
+ - Added support for fading PointCloud to solid colors
+ - Added Wave Distortion Effect
+ - Added Noise Distortion Effect
+ - Using VBOs for underlying geometry
+ - Upgraded to most recent version of openFrameworks (0.8.1)
+ - Switched from GLUT to GLFW windowing system
+ - OBJ's no longer export mirrored on the X axis
+ - Added support for hue-encoded combined exporting formats
 
 =======
 005 - April 15th 2013
